# sierra-analyzer

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  rust-toolchain.toml  rustfmt.toml
.github/workflows/: rust.yml
doc/: detector-creation.md  llm-decompilation.md
examples/scarb/scarb_example/: Scarb.toml
examples/scarb/scarb_example/src/: lib.cairo
examples/scarb/scarb_example/tests/: test_contract.cairo
examples/starknet/: controlled_library_call.json  unimpaired_cairo_Overflow.contract_class.json
lib/: Cargo.toml
lib/examples/: cfg_paths.rs  functions_detector.rs  generate_callgraph.rs  generate_cfg.rs  parse_sierra_file.rs  parse_starknet_contract.rs  parse_starknet_file.rs  prototypes_detector.rs  run_detectors.rs  strings_detector.rs  tests_generator.rs
lib/src/: config.rs  lib.rs  provider.rs  sierra_program.rs
lib/src/decompiler/: cfg.rs  decompiler.rs  function.rs  libfuncs_patterns.rs  macros.rs  mod.rs  utils.rs
lib/src/detectors/: controlled_library_call_detector.rs  detector.rs  felt_overflow_detector.rs  functions_detector.rs  inputs_generator_detector.rs  l1_handler_detector.rs  mod.rs  prototypes_detector.rs  rounding_error_detector.rs  strings_detector.rs  tests_generator_detector.rs
lib/src/graph/: callgraph.rs
lib/src/sym_exec/: sym_exec.rs
lib/tests/: decompiler.rs  detectors.rs  test_decompiler.rs  test_detectors.rs  test_dotgraph.rs
sierra-analyzer/: Cargo.toml
sierra-analyzer/src/: main.rs  sierra_program.rs
sierra-analyzer/src/decompiler/: cfg.rs  decompiler.rs  function.rs  macros.rs  mod.rs
sierra-decompiler/: Cargo.toml
sierra-decompiler/src/: main.rs
test-generator/: Cargo.toml
