[workspace]
resolver = "2"
members = [
    "sierra-decompiler",
]

[workspace.package]
version = "2.6.3"
edition = "2021"
repository = "https://github.com/starkware-libs/cairo/"
license = "Apache-2.0"
license-file = "LICENSE"

[workspace.dependencies]
anyhow = "1.0.75"
ark-ff = "0.4.2"
ark-secp256k1 = "0.4.0"
ark-secp256r1 = "0.4.0"
ark-std = "0.4.0"
assert_matches = "1.5"
bimap = "0.6.3"
cairo-felt = "0.9.1"
cairo-vm = "0.9.1"
clap = { version = "4.4", features = ["derive"] }
colored = "2"
const-fnv1a-hash = "1.1.0"
const_format = "0.2.32"
convert_case = "0.6.0"
derivative = "2.2.0"
diffy = "0.3.0"
env_logger = "0.11.3"
genco = "0.17.8"
good_lp = { version = "1.8.1", features = ["minilp"], default-features = false }
hashbrown = "0.14.3" 
id-arena = "2.2.1"
ignore = "0.4.20"
indent = "0.1.1"
indexmap = { version = "2.1.0", default-features = false }
indoc = "2.0.4"
itertools = { version = "0.12.1", default-features = false }
keccak = "0.1.4"
lalrpop-util = { version = "0.20.0", features = ["lexer"] }
log = "0.4"
num-bigint = { version = "0.4", default-features = false }
num-integer = "0.1"
num-traits = { version = "0.2", default-features = false }
once_cell = "1.18.0"
parity-scale-codec = { version = "3.6.5", default-features = false, features = ["derive"] }
path-clean = "1.0.1"
pretty_assertions = "1.4.0"
proc-macro2 = "1.0"
quote = "1.0.33"
rayon = "1.8.0"
rstest = "0.19.0"
salsa = "0.16.1"
schemars = { version = "0.8.15", features = ["preserve_order"] }
serde = { version = "1.0.192", default-features = false, features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10.8"
sha3 = "0.10.8"
smol_str = { version = "0.2.0", features = ["serde"] }
starknet-crypto = "0.6.1"
syn = { version = "2.0.39", features = ["full", "extra-traits"] }
test-case = "3.2.1"
test-case-macros = "3.2.1"
test-log = "0.2.13"
thiserror = "1.0.50"
time = { version = "0.3.30", features = [
    "formatting",
    "macros",
    "local-offset",
] }
tokio = { version = "1.33.0", features = ["full", "sync"] }
toml = "0.8.8"
unescaper = "0.1.2"
xshell = "0.2.5"