[workspace]
resolver = "2"

[package]
edition = '2021'
name = "sierra-analyzer"
default-run = "sierra-decompiler"

[[bin]]
name = "sierra-decompiler"
path = "bin/sierra-decompiler/src/main.rs"

[[bin]]
name = "test-generator"
path = "bin/test-generator/src/main.rs"

[profile.dev]
opt-level = 0
debug = true
debug-assertions = true
overflow-checks = true
lto = false
panic = 'unwind'
incremental = true
codegen-units = 256
rpath = false

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = true
panic = 'unwind'
incremental = false
codegen-units = 1
rpath = false

[dependencies]
clap = { version = "4.0.0-rc.1", features = [ "derive" ] }
serde = "1.0.209"
serde_json = "1.0.116"
tokio = "1.37.0"
cairo-lang-sierra = "~2.8.4" 
cairo-lang-starknet-classes = "~2.8.4" 
sierra-analyzer-lib = { path = "./lib" }

