[package]
name = "sierra-analyzer-lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cairo-lang-sierra = { path = "../cairo/crates/cairo-lang-sierra", version = "~2.6.3" }
colored = "2.1.0"

[dev-dependencies]
serde_json = "1.0.116"
cairo-lang-starknet-classes = { path = "../cairo/crates/cairo-lang-starknet-classes" }
