[package]
name = "sierra-analyzer-lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cairo-lang-sierra = "~2.6.3"
colored = "2.1.0"

[dev-dependencies]
serde_json = "1.0.116"
cairo-lang-starknet-classes = "~2.6.3"
